--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>FeedFiction</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title><%= full_title(yield(:title)) %></title>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>
+  </head>
+  <body>
+    <%= render 'layouts/header' %>
+    <div class="container main-body">
+            <div class="modal hide" id="StartStoryModal">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3>Start A Story</h3>
+              </div>
+              <div class="modal-body">
+                <p>To start a story please upload image</p>
+                <div class="row logo-images show-grid">
+                  
+                    <div class="span"><%= link_to image_tag('logos/facebook_logo.jpg'),facebook_path %></div>
+                    <div class="span"><%= link_to image_tag('logos/instagram_logo.jpg'),'#' %></div><div class="span"><%= link_to image_tag('logos/upload_image.jpg'),'#' %></div>
+                 
+                </div>
+              </div>
+              <div class="modal-footer">
+                <a href="#" class="btn" data-dismiss="modal">Close</a>
+                <!--<a href="#" class="btn btn-primary">Save changes</a>-->
+              </div>
+            </div>
+      <%= yield %>
+    </div>
+    
+    
+  </body>
 </html>
