--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,37 +1,6 @@
 
 <div id="story-container">
 	<ul id="tiles" class="unstyled">
-		<% @stories.each do |story| %>
-			<li class="story-box continue-story">
-				<%=  image_tag(story.image_url , width: '240px')  %>
-				<div class="tiels-items-container">
-					<a class="btn btn-small like-story"><i class="icon-thumbs-up"></i>Like</a>
-					<a class="btn btn-small continue-story"><i class="icon-edit"></i>Continue</a>		
-				</div>
-				<div>
-				<% story.story_lines.each do |line| %>
-				  		<span><%=line.line %></span>
-				<% end %>
-				<span class="cs-canvas"></span>
-				</div>
-				<% unless story.is_compleate%>
-					<div>
-						<div class="avatar-writers">
-							<% story.story_lines.each do |line| %>
-								<%= image_tag(line.user.avatar,:class => 'border-image-small')  %>
-							<% end%>
-						</div>
-						<hr/>
-						<div class="continue-story-text">
-							<%= image_tag(current_user.avatar,:class => 'border-image-small image_continue_avatar') if current_user %>
-							<textarea story-id="<%= story.id%>" last-oid="<%= story.story_lines.last.order_id if story.story_lines.present?%>" limit='<%= add_how_many_words story.story_lines%>' <%= 'unlogged="t"' unless current_user%>   placeholder='Add more <%= add_how_many_words story.story_lines%> words..'></textarea>
-							<input type="button" name="submit-story" class="btn" value="submit"/>
-						</div>
-					</div>
-				<%end%>	
-
-			</li>
-
-		<% end %>
+		<%= render :partial => 'static_pages/story' ,:collection => @stories%>
 	</ul>
 </div>
