--- a/app/views/static_pages/_inner_story.html.erb
+++ b/app/views/static_pages/_inner_story.html.erb
@@ -1,37 +1,47 @@
+				<div class="story-header">
+					<h1><%= story_title(story)%></h1>
+
+				</div>
 				<%=  image_tag(story.image_url , width: '365px')  %>
-				<div class="tiels-items-container">
+				
+				<!--<div class="tiels-items-container">
 					<a class="btn btn-small like-story"><i class="icon-thumbs-up"></i>Like</a>
 					<a class="btn btn-small continue-story"><i class="icon-edit"></i>Continue</a>		
-				</div>
+				</div>-->
 				<div class="story-item">
 					<div class="story-area">
-						<% story.story_lines.each do |line| %>
-						  		<span><%=line.line %></span>
+						<% story.story_lines.each do |line,i| %>
+						  		<span><%= i==1 ? line.line.capitalize : line.line %></span>
 						<% end %>
 						<span class="cs-canvas"></span>
 					</div>
-					<% unless story.is_compleate%>
 						<div>
 							
 							<div class="writer-legend ">
-								<div>Writers</div>
+								<div>Feeders</div>
 								<% story.story_lines.each do |line| %>
 									<%= image_tag(line.user.avatar,:class => 'border-image-small')  %>
 								<% end%>
 							</div>
 							<hr/>
-							<div class="continue-story-text">
-								<%= simple_form_for @story_line ,:remote => true,:html => { :class => 'form-horizontal' } do |f| %>
-								<%= image_tag(current_user.avatar,:class => 'border-image-small image_continue_avatar') if current_user %>
-								
-								<%= f.hidden_field :order_id, value: story.story_lines.last.order_id if story.story_lines.present?%>
-								<%= f.hidden_field :story_id, value: story.id %>
-								<textarea limit='<%= add_how_many_words story.story_lines%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Add more <%= add_how_many_words story.story_lines%> words..'></textarea>
-								<span id="continue-error" class="error-message"></span>
-								<input type="submit" name="submit-story" value="submit" class="btn" disabled/>
-								<%end%>
-							</div>
+							<% unless story.is_compleate%>
+								<div>
+									<%= simple_form_for @story_line ,:remote => true  do |f| %>
+									<%= image_tag(current_user.avatar,:class => 'border-image-small') if current_user %>
+									
+									<%= f.hidden_field :order_id, value: story.story_lines.last.order_id if story.story_lines.present?%>
+									<%= f.hidden_field :story_id, value: story.id %>
+									<div class="continue-story-text-area">
+										<textarea limit='<%= add_how_many_words story.story_lines%>' <%= 'unlogged="t"' unless current_user%> name="story_line[line]"  placeholder='Continue story..'></textarea>
+										<span class="counter-text"><%= add_how_many_words story.story_lines%>/55 words left</span>
+										<input type="submit" name="submit-story" value="submit" class="btn" disabled/>
+									</div>
+									<span id="continue-error" class="error-message"></span>
+									
+									<%end%>
+								</div>
+							<%end%>	
 						</div>
-					<%end%>
+					
 					
 				</div>
