--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,14 +133,24 @@ textarea {
 	background-color: #fff;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 	color:#5E5C5C;
+
+	&:hover {
+		box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+		&div.story-header h1{
+			background-color: #000;
+		}
+	}
 	&:hover div.tiels-items-container {
 		display: block;
 	}
 
-	.story-header {
-		background-color: #434343;
-		color: #fff;
-		padding: 5px 10px;
+	.story-header{
+		&a {text-decoration: none;}
+		&h1{
+			background-color: #434343;
+			color: #fff;
+			padding: 5px 10px;
+		}
 	}
 
 	div.tiels-items-container {
