--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -13,8 +13,22 @@ section.story-page {
 		padding: 30px 0;
 	}
 
-	.story-area{
-		font-size:30px;
-		line-height: 40px;
+	.story-item {
+		.story-area{
+			font-size:30px;
+			line-height: 40px;
+		}
+
+		.writer-legend img {
+			display: inline-block;
+			padding: 0;margin: 0;
+			border:0;
+		}
+
+		.continue-story-text-area input.btn {
+			display:none;
+		}
 	}
+
+	
 }
