--- a/app/views/story_lines/create.js.erb
+++ b/app/views/story_lines/create.js.erb
@@ -1,2 +1,2 @@
-$("#story-<%=@story.id%>").html("<%= escape_javascript(render('static_pages/inner_story' , :story => @story )) %>")
+$("#story-item-<%=@story.id%>").html("<%= escape_javascript(render('static_pages/story_item' , :story => @story ))%>");
 feedfiction.actions.continueStory("<%=@story.id%>");
