--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -170,6 +170,10 @@ textarea {
 		font-size:22px;
 		line-height: 30px;
 
+		.story-area{
+			overflow:hidden;
+		}
+
 		&div.writer-legend {
 			position: relative;
 			border-top: solid 1px;
