--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       <!-- Start Story Modal -->
       <%= render 'stories/start_story_modal' %>
     
-    
+    </div>
+    <div id="like-modal" class="modal hide"></div>
   </body>
 </html>
