Fix some bug comments

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -3,8 +3,8 @@ $grayLight : #eee;
 
 
 
-ul.comments {
-	li{
+div.comments {
+	div.comment{
 		border-bottom: 1px solid #DDDDDD;
 		overflow: hidden;
 		&:hover {
