--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<li>
+<div class="comment">
 	<div class="commenter-avatar"><%= basic_avatar(@comment.user) %></div>
 	
 	<div class="comment-body">
@@ -6,4 +6,4 @@
 		<span class="comment-time"><%= time_ago_in_words(@comment.created_at) %></span>
 		<p><%= @comment.comment%></p>
 	</div>
-</li>	
+</div>	
