--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,12 +1,17 @@
-<%= form_for(@comment , remote: true) do |f| %>
-  
-  <%= f.hidden_field :story_id%>
-  
-  <textarea <%= 'unlogged=1' unless current_user %> rows="20" name="comment[comment]" id="comment_comment" data-function="validateComment" cols="40" class="userFunction"></textarea>
-  
-  <% if current_user%>
-	  <div class="actions">
-	    <input type="submit" name="submit" disabled/>
-	  </div>
-  <% end %>
-<% end %>
+<div class="add-comment">
+    <% if current_user %>
+      <div class="commenter-avatar"><%= basic_avatar(current_user) %></div>
+    <%end%>
+	<%= form_for(@comment , remote: true) do |f| %>
+	  
+	  <%= f.hidden_field :story_id%>
+	  
+	  <textarea <%= 'unlogged=1' unless current_user %> rows="20" name="comment[comment]" id="comment_comment" data-function="validateComment" cols="40" class="userFunction" placeholder="Add your comment here..."></textarea>
+	  
+	  <% if current_user%>
+		  <div class="actions">
+		    <%= f.submit :disable_with => 'Please wait...' , :disabled => true %>
+		  </div>
+	  <% end %>
+	<% end %>
+</div>
