--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -4,18 +4,16 @@
   <h1><%= story_title(@story)%></h1>
   <%= render 'static_pages/story_item' , :story => @story%>
 
-  
-  <% unless @story.comments.empty? %>
-    <%= render 'comments/show' , :@comments => @story.comments%>
-  <% end  %>
-  <div>
-    <h4>Add Comment:</h4>
-    <div class="add-comment">
-      <% if current_user %>
-        <div class="commenter-avatar"><%= basic_avatar(current_user) %></div>
-      <%end%>
-        <%= render 'comments/new' , :@comment => @new_comment %>
-      
-    </div>
-  </div>
+  <% if @story.is_complete %>
+    <h3>Comments:</h3>
+    <div id="comments-<%=@story.id%>" class="comments">
+      <div class="comments-container">
+        <% unless @story.comments.empty? %>
+          <%= render 'comments/show' , :@comments => @story.comments%>
+        <% end  %>
+      </div>
+       <%= render 'comments/new' , :@comment => @new_comment %>
+    </div> 
+  <% end %>
+   
 </section>
