--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<% provide(:title, @user.name) %>
+<div class="user-info">
+  <%= normal_avatar(@user) %>
+  <p><h3><%= @user.name %></h3></p>  
+  <ul>
+  	<li>Like:<%= @user.likes.count%></li>
+  	<li>stories:<%= @user.stories.count%></li>
+  </ul>  
+  <div class="buttons">
+  		<input type="button" value="Follow" class="btn btn-large"/>
+  </div>
+ <div>
+ 	<%= render 'feeds/feed' ,:@stories => @user.stories%>
+ </div>
+	
