--- a/app/views/import_images/_start_story.html.erb
+++ b/app/views/import_images/_start_story.html.erb
@@ -13,7 +13,7 @@
 				 	<li>Please start your story (minimum 10 words) and give other to complete your story</li>
 				 	<li><%= image_tag(current_user.avatar,:class => 'border-image-small')  %>
 				 		<textarea name='line'></textarea>
-				 	<%=f.hidden_field :image_url , :class => 'ss-image' %>
+				 	<%=f.hidden_field :image_id , :class => 'ss-image' %>
 				 	</li>
 				 	
 
