--- a/app/views/static_pages/_inner_story.html.erb
+++ b/app/views/static_pages/_inner_story.html.erb
@@ -1,7 +1,7 @@
 				<div class="story-header">
 					<%= link_to (story) do%>
 					<h1><%= story_title(story)%></h1>
-					<%=  image_tag(story.image_url , width: '365px')  %>
+					<%=  image_tag(story.image.url , width: number_to_pixel(story.image.width) , height: number_to_pixel(story.image.height))  %>
 					<% end %>
 				</div>
 				
@@ -11,15 +11,4 @@
 					<a class="btn btn-small continue-story"><i class="icon-edit"></i>Continue</a>		
 				</div>-->
 				<%= render 'static_pages/story_item' , :story => story%>
-				 <% if story.is_complete %>
-				    <h3>Comments:
-					<% unless story.comments.empty?%>
-				    	<%= link_to story.comments.count ,story ,{:id => 'comment-total'}%>
-				    <% end %>
-				    </h3>
-				    <div id="comments-<%=story.id%>" class="comments">
-				      <div class="comments-container">
-				      </div>
-				      
-				    </div> 
-  				<% end %>	
+				
