--- a/app/views/static_pages/_story.html.erb
+++ b/app/views/static_pages/_story.html.erb
@@ -1,5 +1,5 @@
 		<li class="story-box continue-story" id="story-<%= story.id%>" >
 			
-			<%= render 'static_pages/inner_story' , :story => story%>
+			<%= render 'static_pages/inner_story' , :story => story, :@comments => story.last_comments%>
 				
 		</li>
