--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -2,4 +2,5 @@
 	<ul id="tiles" class="unstyled">
 		<%= render :partial => 'static_pages/story' ,:collection => @stories%>
 	</ul>
+	<%= will_paginate @stories%>
 </div>
