add sleep to paginate

--- a/app/views/feeds/index.js.erb
+++ b/app/views/feeds/index.js.erb
@@ -4,4 +4,5 @@ $('.pagination').replaceWith('<%= j will_paginate(@stories) %>');
 <% else %>
 $('.pagination').remove();
 <% end %>
+<% sleep 1%>
 feedfiction.actions.renderBoxes()
