Added disclaimer when unlogged

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,3 +43,8 @@
     </div>
   </div>
 </header>
+<% unless current_user%>
+  <div class="unlogin-disclaimer hero-unit">
+    <p>Please login</p>
+  </div>
+<% end %>
