added few changes in stories and likes

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,6 +1,1 @@
-<div id="story-container">
-	<ul id="tiles">
-		<%= render :partial => 'static_pages/story' ,:collection => @stories%>
-	</ul>
-	<%= will_paginate @stories%>
-</div>
+<%= render 'feed' %>
