--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top">
+<header class="navbar navbar-fixed-top navbar-static-top">
   <div class="navbar-inner">
     <div class="container">
       <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand logo" %>
