--- a/app/views/users/_user_header.html.erb
+++ b/app/views/users/_user_header.html.erb
@@ -10,7 +10,7 @@
   <div class="navbar-inner">
     <a class="brand" href="#">stories:<%= @user.stories.count%></a>
     <ul class="nav">
-      <li class="active"><a href="#">Like:<%= @user.likes.count%></a></li>
+      <li class="active"><a href="<%= likes_user_path%>">Like:<%= @user.likes.count%></a></li>
       <li><%= render 'shared/stats' %></li>
       <li><a href="#">Link</a></li>
     </ul>
