added hp header

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -243,6 +243,13 @@ textarea {
 	background-color: #A4FF00;
 }
 
+/* Home page */
+.header-hp {
+	
+}
+
+
+
 /* User */
 .user-info {
 	.navbar-inner {
