--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
               
           <% else %>
               
-              <li><a href id="sign_in">Sign in with Facebook</a>
+              <li><a href class="sign-in">Sign in with Facebook</a>
 
           <% end %>
         </ul>
