--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -5,12 +5,7 @@
               </div>
               <div class="modal-body">
                 <p>To start a story please upload image</p>
-                <div class="row logo-images show-grid">
-                  
-                    <div class="span"><%= link_to image_tag('logos/facebook_logo.jpg'),facebook_path %></div>
-                    <div class="span"><%= link_to image_tag('logos/instagram_logo.jpg'),'#' %></div><div class="span"><%= link_to image_tag('logos/upload_image.jpg'),'#' %></div>
-                 
-                </div>
+                <%= render 'layouts/image_provider' %>
               </div>
               <div class="modal-footer">
                 <a href="#" class="btn" data-dismiss="modal">Close</a>
