Added categories drop down

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,10 @@ textarea ,input[type=text] {
 	}
 }
 
+.category-dropdown {
+	width:200px;
+	margin:0 auto;
+}
 /* Modal start a story from facebook or Insta*/
 
 #start-story{
