--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,8 +43,13 @@
     </div>
   </div>
 </header>
+
 <% unless current_user%>
-  <div class="unlogin-disclaimer hero-unit">
-    <p>Please login</p>
-  </div>
+  <% unless @donot_show_disclaimer%>
+    <div class="unlogin-disclaimer hero-unit">
+      <p>Use Feedfiction to write stories alone or with friends</p>
+      <button class="btn btn-large btn-primary sign-in" type="button">Sign up</button>
+    </div>
+  <% end %>
 <% end %>
+
