--- a/app/views/static_pages/_inner_story.html.erb
+++ b/app/views/static_pages/_inner_story.html.erb
@@ -1,6 +1,6 @@
 				<div class="story-header">
 					<%= link_to (story) do%>
-					<h1><%= story_title(story)%></h1>
+					<h1><%= story.story_title%></h1>
 					<%=  image_tag(story.image.url , width: number_to_pixel(story.image.width) , height: number_to_pixel(story.image.height))  %>
 					<% end %>
 				</div>
