--- a/app/views/static_pages/_story_item.html.erb
+++ b/app/views/static_pages/_story_item.html.erb
@@ -41,7 +41,7 @@
 				</div>
 					
 			
-				<% if false %>
+				<% if story.is_complete %>
 				    <h3>Comments:</h3>
 				    <div id="comments-<%=story.id%>" class="comments">
 				      <div class="comments-container">
