--- a/app/views/static_pages/_inner_story.html.erb
+++ b/app/views/static_pages/_inner_story.html.erb
@@ -4,9 +4,7 @@
 					<%=  image_tag(story.image.url , width: number_to_pixel(story.image.width) , height: number_to_pixel(story.image.height))  %>
 					<% end %>
 				</div>
-				<div>
-					Started <%= time_ago_in_words story.created_at%> ago By: <%= link_to story.user.name , story.user  %> from Facebook
-				</div>
+				<%= render 'static_pages/started_by' , :story => story%>
 				
 				
 				<!--<div class="tiels-items-container">
