--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -15,6 +15,7 @@
 	<span class='st_pinterest_vcount' displayText='Pinterest'></span>
 	<span class='st_email_vcount' displayText='Email'></span>
   <%=  image_tag(@story.image.url)  %>
+  <%= render 'static_pages/started_by' , :story => @story%>
   <h1><%= @story.story_title%></h1>
   <%= render 'static_pages/story_item' , :story => @story%>
 
