--- a/app/views/user_mailer/continue_story.html.erb
+++ b/app/views/user_mailer/continue_story.html.erb
@@ -1,3 +1,3 @@
 <h2>Congrats!</h2>
-<p><%= @current_user.name %> continued your story</p>
-<div><%= link_to 'read here' ,@story_url %></div>
+<p><%= link_to @current_user.name, user_url(@current_user) %> continued your story</p>
+<div><%= link_to 'read here' ,story_url(@story) %></div>
