--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -277,7 +277,11 @@ textarea {
 	          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	}
 }
+/* Notifications */
 
+.notifications {
+	font-size: 20px;
+}
 
 	
 	
