--- a/app/assets/javascripts/like.js.coffee.erb
+++ b/app/assets/javascripts/like.js.coffee.erb
@@ -1,5 +1,5 @@
 jQuery ->
-	$('a.like-link').click ->
+	$('a.like-link').live 'click' , ->
 	  target = ($ @).attr('data-target')
 	  url = ($ @).attr('href')
 	  ($ target).load(url)
