--- a/app/views/feeds/index.js.erb
+++ b/app/views/feeds/index.js.erb
@@ -5,4 +5,4 @@ $('.pagination').replaceWith('<%= j will_paginate(@stories) %>');
 $('.pagination').remove();
 <% end %>
 <% sleep 1%>
-feedfiction.actions.renderBoxes()
+feedfiction.actions.renderBoxes();
