--- a/app/views/stories/_story_item.html.erb
+++ b/app/views/stories/_story_item.html.erb
@@ -17,6 +17,8 @@
 				</div>
 				<hr/>
 				<div>
+					<%= link_to "Flag", new_flag_url(:story_id => story.id), :remote => true, :class => "btn btn-danger unregistered" %>
+					<div class="flag-container"></div>
 				<% unless story.is_complete%>
 					<div>
 						<%= simple_form_for @story_line ,:remote => true  do |f| %>
@@ -38,6 +40,7 @@
 						<%= render 'stories/like_actions' , :story => story%>		
 						
 					<%end%>	
+
 				</div>
 					
 			
