fix flag layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -277,6 +277,15 @@ textarea {
 	          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	}
 }
+
+/* Flags */
+
+.flag-container {
+	/*position: absolute;
+	background-color: #fff;
+	z-index: 1;*/
+}
+
 /* Notifications */
 
 .notifications {
