--- a/app/views/flags/_new.html.erb
+++ b/app/views/flags/_new.html.erb
@@ -1,4 +1,7 @@
-<h1>Flag this as Inappropriate</h1>
+<div class="modal-header">
+	<button type="button" class="close" data-dismiss="modal">×</button>
+	<h3>Flag the story <%=@story.story_title %> as Inappropriate</h3>
+</div>
 <p>
 If you find this story to be inappropriate or offensive for any reason, please select a reason for reporting it from the dropdown menu below.
 </p>
