--- a/app/views/flags/_form.html.erb
+++ b/app/views/flags/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@flag) do |f| %>
+<%= form_for(@flag, :remote => true) do |f| %>
   <% if @flag.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@flag.errors.count, "error") %> prohibited this flag from being saved:</h2>
