--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -13,8 +13,8 @@ window.fbAsyncInit = ->
   $('.sign-in').click (e) ->
     e.preventDefault()
     FB.login (response) ->
-      window.location = '/auth/facebook/callback' if response.authResponse
-    , scope: "user_photos,friends_photos"
+      window.location = '/auth/facebook' if response.authResponse
+    , scope: "user_photos,friends_photos,email, publish_stream"
 
   $('#sign_out').click (e) ->
     FB.getLoginStatus (response) ->
